<resources>
    <string name="app_name">NBA_App_Project</string>
    <string name="team_name">Team Name</string>
    <string name="team_wins">Wins</string>
    <string name="team_losses">Losses</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="player_number">Number</string>
    <string name="player_position">Position</string>
    <string-array name="sort_options">
        <item>Ascending</item>
        <item>Descending</item>
        <item>Wins</item>
        <item>Losses</item>
    </string-array>
    <string name="teamPageWins">Wins: %1$s </string>
    <string name="teamPageLosses">Losses: %1$s </string>
    <string name="full_name">Full Name</string>
</resources>